--- a/scss/calcYourBmi.scss
+++ b/scss/calcYourBmi.scss
@@ -32,15 +32,18 @@ td,
 th {
     border: 1px dotted #333;
 }
-thead,
-tfoot {
-
+tbody tr:nth-of-type(odd) {
+    background: #000;
+    color: #fff;
 }
 .inline-block {
     display: inline-block;
 }
 .flex {
     display: flex;
+}
+.flex-wrap {
+    flex-wrap: wrap;
 }
 .f-d-column {
     flex-direction: column;
@@ -60,16 +63,24 @@ tfoot {
 .m-l-30 {
     margin-left: 30px;
 }
-
 .container {
     width: 80%;
     height: 100vh;
     margin: 0 auto;
+    @media (max-width: 604px){
+        height: unset;
+    }
     .all-object {
         width: 100%;
         border: 10px dotted #000;
         padding: 10px;
+        @media (max-width: 604px){
+            margin: 30px 0;
+        }
         header {
+            h1 {
+                font-size: 40px;
+            }
 
         }
         main {
@@ -85,6 +96,33 @@ tfoot {
                 border-radius: 50px;
             
             }
+            .how-tall {
+                @media (max-width: 593px) {
+                    h4 {
+                        margin: 0;
+                    }
+                }
+            }
+            .how-heavy {
+                @media (max-width: 593px) {
+                    h4 {
+                        width: 300px;
+                        margin-left: unset;
+                        margin: 20px 0;
+                    }
+                }
+            }
+            .user-btn {
+                @media (max-width: 926px) {
+                    display: flex;
+                    justify-content: space-between;
+                    width: 300px;
+                    margin-bottom: 20px;
+                    button {
+                        margin-left: unset;
+                    }
+                }
+            }
             table {
                 margin: 30px  auto;
                 thead {
@@ -94,11 +132,5 @@ tfoot {
                 } 
             }
         }
-
-
-        
-
     }
-
-
 }
