--- a/scss/calcYourBmi.scss
+++ b/scss/calcYourBmi.scss
@@ -7,6 +7,7 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
+    background: #f6f6f6;
 }
 h2, h3, h4 {
     display: inline-block;
@@ -32,9 +33,12 @@ td,
 th {
     border: 1px dotted #333;
 }
+input[type='radio'] {
+    accent-color: #000000;
+}
 tbody tr:nth-of-type(odd) {
-    background: #000;
-    color: #fff;
+    background: white;
+    color: #000000;
 }
 .inline-block {
     display: inline-block;
@@ -81,9 +85,24 @@ tbody tr:nth-of-type(odd) {
             h1 {
                 font-size: 40px;
             }
-
+            h2 {
+                margin: 0;
+            }
         }
         main {
+            .gender {
+                margin: 0 auto;
+                @media (max-width: 590px) {
+                    margin: 0 auto 20px;
+                }
+                div{
+                    height: 50px;
+                }
+                span {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+            }
             #bmi-result {
                 width: 80%;
                 height: 50px;
